--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 
-.DS_Store
+/.DS_Store
 
-application.properties
+/Users/kb01-jjsair0412/kubernetes_info/for jenkins pipeline sample_code/sign_in_api/src/main/resources/application.properties
+
+/Users/kb01-jjsair0412/kubernetes_info/for jenkins pipeline sample_code/sign_up_api/src/main/resources/application.properties
