--- a/for jenkins pipeline sample_code/sign_up_api/src/main/resources/application.properties
+++ b/for jenkins pipeline sample_code/sign_up_api/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # DB Source URL
-spring.datasource.url=jdbc:mysql://3.35.95.78:30444/mysql?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
+spring.datasource.url=jdbc:mysql://xxx:30444/mysql?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
 
 # DB username
 spring.datasource.username=root
