--- a/cicd/springBoot-gradle/gradle-helm-chart/cicd-gradle/values.yaml
+++ b/cicd/springBoot-gradle/gradle-helm-chart/cicd-gradle/values.yaml
@@ -41,15 +41,15 @@ service:
   port: 80
 
 ingress:
-  enabled: false
+  enabled: true
   className: ""
   annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: chart-example.local
+    - host: test.com
       paths:
-        - path: /
+        - path: /test
           pathType: ImplementationSpecific
   tls: []
   #  - secretName: chart-example-tls
