--- a/cicd/springBoot-gradle/gradle-helm-chart/cicd-gradle/values.yaml
+++ b/cicd/springBoot-gradle/gradle-helm-chart/cicd-gradle/values.yaml
@@ -42,9 +42,9 @@ service:
 
 ingress:
   enabled: true
-  className: ""
+  className: "nginx"
   annotations: {}
-    # kubernetes.io/ingress.class: nginx
+    kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
     - host: test.com
