--- a/cicd/springBoot-gradle/gradle-helm-chart/cicd-gradle/values.yaml
+++ b/cicd/springBoot-gradle/gradle-helm-chart/cicd-gradle/values.yaml
@@ -43,7 +43,7 @@ service:
 ingress:
   enabled: true
   className: "nginx"
-  annotations: {}
+  annotations: 
     kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
