--- a/cicd/springBoot-gradle/gradle-helm-chart/cicd-gradle/values.yaml
+++ b/cicd/springBoot-gradle/gradle-helm-chart/cicd-gradle/values.yaml
@@ -49,7 +49,7 @@ ingress:
   hosts:
     - host: test.com
       paths:
-        - path: /test
+        - path: /
           pathType: ImplementationSpecific
   tls: []
   #  - secretName: chart-example-tls
