--- a/kubernetes resource/CRD 개발 관련 - cr , crd , k8s object , operator/crd 개발 - golang/cr,crd/mycrd.yaml
+++ b/kubernetes resource/CRD 개발 관련 - cr , crd , k8s object , operator/crd 개발 - golang/cr,crd/mycrd.yaml
@@ -2,7 +2,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   # name must match the spec fields below, and be in the form: <plural>.<group>
-  name: helloworld.jjsair0412.example.com
+  name: helloworlds.jjsair0412.example.com
 spec:
   # group name to use for REST API: /apis/<group>/<version>
   group: jjsair0412.example.com
@@ -14,23 +14,14 @@ spec:
       # One and only one version must be marked as the storage version.
       storage: true
       schema:
+        # openAPIV3Schema는 required option 
         openAPIV3Schema:
           type: object
-          properties:
-            spec:
-              type: object
-              properties:
-                cronSpec:
-                  type: string
-                image:
-                  type: string
-                replicas:
-                  type: integer
   # either Namespaced or Cluster
   scope: Namespaced
   names:
     # plural name to be used in the URL: /apis/<group>/<version>/<plural>
-    plural: helloworld
+    plural: helloworlds
     # singular name to be used as an alias on the CLI and for display
     singular: helloworld
     # kind is normally the CamelCased singular type. Your resource manifests use this.
