--- a/kubernetes resource/CRD 개발 관련 - cr , crd , k8s object , operator/crd 개발 - golang/cr,crd yaml manifest/mycr.yaml
+++ b/kubernetes resource/CRD 개발 관련 - cr , crd , k8s object , operator/crd 개발 - golang/cr,crd yaml manifest/mycr.yaml
@@ -2,7 +2,7 @@ apiVersion: "jjsair0412.example.com/v1"
 kind: helloworld
 metadata:
   name: hello-sample
-  namespace: test
+  # namespace: test
 # required option
 spec:
   # required option
