--- a/kubernetes resource/CRD 개발 관련 - cr , crd , k8s object , operator/crd 개발 - kubernetes/cr,crd yaml manifest/mycr.yaml
+++ b/kubernetes resource/CRD 개발 관련 - cr , crd , k8s object , operator/crd 개발 - kubernetes/cr,crd yaml manifest/mycr.yaml
@@ -2,12 +2,12 @@ apiVersion: "jjsair0412.example.com/v1"
 kind: helloworld
 metadata:
   name: hello-sample
-  # namespace: test
+  namespace: test
 # required option
 spec:
   # required option
-  appId: "hello-world"
-  replicas: 3
+  appId: "hello-worldd-jin"
+  replicas: 1
   message: "hi"
   image: nginx
-  language: java
+  language: python
