--- a/etc/Tomcat_Session_Clustering_web_was_분리/tomcat-sesion-clustering-setting/cluster/apache/httpd.conf
+++ b/etc/Tomcat_Session_Clustering_web_was_분리/tomcat-sesion-clustering-setting/cluster/apache/httpd.conf
@@ -196,7 +196,7 @@ LoadModule dir_module modules/mod_dir.so
 #LoadModule speling_module modules/mod_speling.so
 #LoadModule userdir_module modules/mod_userdir.so
 LoadModule alias_module modules/mod_alias.so
-#LoadModule rewrite_module modules/mod_rewrite.so
+LoadModule rewrite_module modules/mod_rewrite.so
 
 <IfModule unixd_module>
 #
@@ -262,8 +262,10 @@ ServerAdmin you@example.com
 # documents. By default, all requests are taken from this directory, but
 # symbolic links and aliases may be used to point to other locations.
 #
-DocumentRoot "/usr/local/apache2/htdocs"
-<Directory "/usr/local/apache2/htdocs">
+# DocumentRoot "/usr/local/apache2/htdocs"
+# <Directory "/usr/local/apache2/htdocs">
+DocumentRoot "/data/html/"
+<Directory "/data/html/">
     #
     # Possible values for the Options directive are "None", "All",
     # or any combination of:
@@ -555,5 +557,12 @@ SSLRandomSeed connect builtin
   ProxyPreserveHost On
   ProxyPass / http://was-portal:8112/ 
   ProxyPassReverse / http://was-portal:8112/ 
+
+  # rewrite 설정
+  RewriteEngine On
+  RewriteCond %{REQUEST_URI} ^/$
+  RewriteRule ^.+ /data/html/sorry_page.html [L]
+#   RewriteRule ^ /underconstruction.html [R=301]
 </VirtualHost>
+
 
