--- a/etc/vagrant/Vagrantfile
+++ b/etc/vagrant/Vagrantfile
@@ -80,18 +80,22 @@ echo 'init start ..'
 sudo kubeadm init
 
 echo 'token create ..'
-sudo kubeadm token create --print-join-command > $OUTPUT_FILE
-chmod +x $OUTPUT_FILE
+sudo kubeadm token create --print-join-command > /home/vagrant/join_command.sh
+chmod +x /home/vagrant/join_command.sh
 
 echo 'print join command file location ..'
 pwd
 ls
 
-sudo mkdir -p $HOME/.kube
+mkdir -p $HOME/.kube
 sudo cp /etc/kubernetes/admin.conf $HOME/.kube/config
 sudo chown $(id -u):$(id -g) $HOME/.kube/config
 
 kubectl get nodes
+SCRIPT
+
+$workerConfig = <<-SCRIPT
+
 SCRIPT
 
 Vagrant.configure("2") do |config|
