--- a/etc/vagrant/Vagrantfile
+++ b/etc/vagrant/Vagrantfile
@@ -1,113 +1,6 @@
 # -*- mode: ruby -*-
 # vi: set ft=ruby :
 
-
-$installcontainerruntime = <<-SCRIPT
-echo "Updating packages..."
-sudo apt-get update -y
-sudo apt-get install net-tools
-
-echo "start install containerd"
-cat <<EOF | sudo tee /etc/modules-load.d/containerd.conf
-overlay
-br_netfilter
-EOF
-
-sudo modprobe overlay
-sudo modprobe br_netfilter
-
-cat <<EOF | sudo tee /etc/sysctl.d/99-kubernetes-cri.conf
-net.bridge.bridge-nf-call-iptables  = 1
-net.ipv4.ip_forward                 = 1
-net.bridge.bridge-nf-call-ip6tables = 1
-EOF
-
-sudo sysctl --system
-
-curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
-sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
-sudo apt update -y
-sudo apt install -y containerd.io
-sudo mkdir -p /etc/containerd
-containerd config default | sudo tee /etc/containerd/config.toml
-
-echo "start containerd"
-sudo systemctl restart containerd
-sudo systemctl enable containerd
-
-SCRIPT
-
-
-$installkube = <<-SCRIPT
-sudo su
-
-echo "Disable swap memory .."
-swapoff -a && sed -i '/swap/s/^/#/' /etc/fstab
-
-cat <<EOF | sudo tee /etc/modules-load.d/k8s.conf
-br_netfilter
-EOF
-
-cat <<EOF | sudo tee /etc/sysctl.d/k8s.conf
-net.bridge.bridge-nf-call-ip6tables = 1
-net.bridge.bridge-nf-call-iptables = 1
-EOF
-sudo sysctl --system
-
-echo "Disable firewalld .."
-systemctl stop firewalld
-systemctl disable firewalld
-
-echo "install kubeadm , kubectl , kubelet .."
-sudo apt-get update -y
-sudo apt-get install -y apt-transport-https ca-certificates curl
-
-sudo curl -fsSLo /usr/share/keyrings/kubernetes-archive-keyring.gpg https://packages.cloud.google.com/apt/doc/apt-key.gpg
-
-echo "deb [signed-by=/usr/share/keyrings/kubernetes-archive-keyring.gpg] https://apt.kubernetes.io/ kubernetes-xenial main" | sudo tee /etc/apt/sources.list.d/kubernetes.list
-
-sudo apt-get update -y
-sudo apt-get install -y kubelet kubeadm kubectl
-
-sudo apt-mark hold kubelet kubeadm kubectl
-
-sudo systemctl start kubelet
-sudo systemctl enable kubelet
-
-SCRIPT
-
-$masterConfig = <<-SCRIPT
-$OUPUT_FILE=/home/vagrant/join/join_command.sh
-rm -rf /vagrant/join/join.sh
-echo 'init start ..'
-sudo kubeadm init --apiserver-advertise-address=192.168.50.10
-
-echo 'token create ..'
-mkdir join
-sudo kubeadm token create --print-join-command > /home/vagrant/join/join_command.sh
-
-chmod +x /home/vagrant/join/join_command.sh
-
-echo 'print join command file location ..'
-ls
-chmod +x $OUTPUT_FILE
-
-mkdir -p $HOME/.kube
-sudo cp /etc/kubernetes/admin.conf $HOME/.kube/config
-sudo chown $(id -u):$(id -g) $HOME/.kube/config
-
-kubectl get nodes
-
-# Install Calico Network Plugin
-kubectl create -f https://raw.githubusercontent.com/projectcalico/calico/v3.25.0/manifests/tigera-operator.yaml
-
-SCRIPT
-
-
-$workerConfig = <<-SCRIPT
-/home/vagrant/join/join_command.sh
-SCRIPT
-
 Vagrant.configure("2") do |config|
 
   config.vm.boot_timeout = 600
@@ -120,9 +13,8 @@ Vagrant.configure("2") do |config|
       masterSpec.memory = 4096
       masterSpec.cpus = 4
     end
-    master.vm.provision "shell", inline: $installcontainerruntime
-    master.vm.provision "shell", inline: $installkube
-    master.vm.provision "shell", inline: $masterConfig
+    master.vm.provision "shell", path: "./script/common_config.sh"
+    master.vm.provision "shell", path: "./script/master.sh"
   end
 
   (1..2).each do |n|
@@ -135,9 +27,8 @@ Vagrant.configure("2") do |config|
         workerSpec.memory = 4096
         workerSpec.cpus = 4
       end
-      worker.vm.provision "shell", inline: $installcontainerruntime
-      worker.vm.provision "shell", inline: $installkube
-      worker.vm.provision "shell", inline: $workerConfig
+      worker.vm.provision "shell", path: "./script/common_config.sh"
+      worker.vm.provision "shell", path: "./script/worker.sh"
     end
 
 
