--- a/etc/vagrant/Vagrantfile
+++ b/etc/vagrant/Vagrantfile
@@ -4,6 +4,7 @@
 Vagrant.configure("2") do |config|
 
   config.vm.boot_timeout = 1000
+  config.vm.network "forwarded_port", guest: 80, host: 8080 # 포트포워딩 설정 . 
   config.vm.define "master" do |master| # | | 내부는 alias, 첫글자는 대문자가 올 수 없다.
     master.vm.box = "ubuntu/focal64"
     master.vm.host_name = "master"
