--- a/etc/vagrant/Vagrantfile
+++ b/etc/vagrant/Vagrantfile
@@ -2,13 +2,12 @@
 # vi: set ft=ruby :
 
 Vagrant.configure("2") do |config|
-
   config.vm.boot_timeout = 1000
-  config.vm.network "forwarded_port", guest: 80, host: 8080 # 포트포워딩 설정 . 
   config.vm.define "master" do |master| # | | 내부는 alias, 첫글자는 대문자가 올 수 없다.
+
     master.vm.box = "ubuntu/focal64"
     master.vm.host_name = "master"
-    master.vm.network "public_network", ip: "192.168.50.10"
+    master.vm.network "private_network", ip: "192.168.50.10"
     master.vm.synced_folder "./join", "/home/vagrant/join"
     master.vm.provider :virtualbox do |masterSpec|
       masterSpec.memory = 4096
@@ -22,7 +21,7 @@ Vagrant.configure("2") do |config|
     config.vm.define "worker-#{n}" do |worker|
       worker.vm.box = "ubuntu/focal64"
       worker.vm.host_name = "worker-#{n}"
-      worker.vm.network "public_network", ip: "192.168.50.1#{n}"
+      worker.vm.network "private_network", ip: "192.168.50.1#{n}"
       worker.vm.synced_folder "./join", "/home/vagrant/join"
       worker.vm.provider :virtualbox do |workerSpec|
         workerSpec.memory = 4096
