--- a/etc/vagrant/Vagrantfile
+++ b/etc/vagrant/Vagrantfile
@@ -9,6 +9,7 @@ Vagrant.configure("2") do |config|
     master.vm.host_name = "master"
     master.vm.network "private_network", ip: "192.168.50.10"
     master.vm.synced_folder "./join", "/home/vagrant/join"
+    master.vm.network "forwarded_port", guest: 6443, host: 6443
     master.vm.provider :virtualbox do |masterSpec|
       masterSpec.memory = 4096
       masterSpec.cpus = 4
