--- a/DevOps_solutions/apache-kafka/Kafka_CDC/Vagrantfile
+++ b/DevOps_solutions/apache-kafka/Kafka_CDC/Vagrantfile
@@ -8,9 +8,9 @@ Vagrant.configure("2") do |config|
     kafka.vm.box = "ubuntu/focal64"
     kafka.vm.host_name = "kafka"
     kafka.vm.network "private_network", ip: "192.168.50.10"
-    kafka.vm.network "forwarded_port", guest: 9092, host: 9092 # broker port
-    kafka.vm.network "forwarded_port", guest: 8083, host: 8083 # connector port
-    kafka.vm.network "forwarded_port", guest: 2888, host: 2888 # zookeeper port 
+    # kafka.vm.network "forwarded_port", guest: 9092, host: 9092 # broker port
+    # kafka.vm.network "forwarded_port", guest: 8083, host: 8083 # connector port
+    # kafka.vm.network "forwarded_port", guest: 2888, host: 2888 # zookeeper port 
     kafka.vm.provider :virtualbox do |kafkaSpec|
       kafkaSpec.memory = 4096
       kafkaSpec.cpus = 4
@@ -22,7 +22,7 @@ Vagrant.configure("2") do |config|
       db.vm.box = "ubuntu/focal64"
       db.vm.host_name = "db-#{n}"
       db.vm.network "private_network", ip: "192.168.50.1#{n}"
-      db.vm.network "forwarded_port", guest: 3306, host: 3306 # MySQL port
+      # db.vm.network "forwarded_port", guest: 3306, host: 3306 # MySQL port
       db.vm.provider :virtualbox do |dbSpec|
         dbSpec.memory = 4096
         dbSpec.cpus = 4
