presignedurl aws 및 openstack

--- a/working_History/BackEnd_Spring/awsS3PresignedURL/src/main/resources/application.properties
+++ b/working_History/BackEnd_Spring/awsS3PresignedURL/src/main/resources/application.properties
@@ -5,3 +5,9 @@ cloud.aws.credentials.secret-key=test-secret-key
 cloud.aws.region.static=test-region
 
 
+cloud.openstack.credentials.userId=test-user
+cloud.openstack.credentials.userPwd=test-pwd
+cloud.openstack.credentials.authUrl=test-authURL
+cloud.openstack.credentials.domain=test-domain
+cloud.openstack.credentials.projectId=test-projectId
+
