--- a/working_History/BackEnd_Spring/ffmpegTest/Dockerfile
+++ b/working_History/BackEnd_Spring/ffmpegTest/Dockerfile
@@ -9,6 +9,7 @@ RUN apt-get clean \
     && apt-get update -y \
     && apt-get install -y openjdk-17-jdk \
     && apt-get install -y wget \
+    && apt-get install -y xz-utils \
     && apt-get clean
 
 
