SpringBatch_To_ElasticSearch 색인 테스트 완료

--- a/working_History/BackEnd_Spring/searchFunctionTest/indexInitBatch/src/main/resources/application.properties
+++ b/working_History/BackEnd_Spring/searchFunctionTest/indexInitBatch/src/main/resources/application.properties
@@ -1,5 +1,12 @@
 
-spring.datasource.url: jdbc:mysql://localhost:3308/test
-spring.datasource.username: root
-spring.datasource.password: 1234
-spring.datasource.driver-class-name: com.mysql.cj.jdbc.Driver
+spring.datasource.url= jdbc:mysql://localhost:3308/test
+spring.datasource.username= root
+spring.datasource.password= 1234
+spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
+
+spring.elasticsearch.uris=http://localhost:9200
+spring.elasticsearch.username=test
+spring.elasticsearch.password=test1234
+
+logging.level.org.springframework.data.elasticsearch=TRACE
+logging.level.org.elasticsearch=TRACE
