--- a/DevOps_solutions/Elastic_모음/Logstash/Pipeline/logstash.conf
+++ b/DevOps_solutions/Elastic_모음/Logstash/Pipeline/logstash.conf
@@ -21,8 +21,7 @@ filter {
 output {
   elasticsearch {
     hosts => ["http://elasticsearch:9200"] 
-    # index => "%{+YYYY.DD.dd}_full_indexing_test_three"
-    index => "info_index"
+    index => "%{+YYYY.DD.dd}_full_indexing_test_three"
     user => "test"  
     password => "test1234"
     document_id => "%{[@metadata][fingerprint]}" # Use the fingerprint as the document _id
