ElasticSearch pipeline 수정 (cron 추가 및 오탈자 수정)

--- a/DevOps_solutions/Elastic_모음/Logstash/Pipeline/logstash.conf
+++ b/DevOps_solutions/Elastic_모음/Logstash/Pipeline/logstash.conf
@@ -7,6 +7,7 @@ input {
         user => "test"
         password => "test1234"
         docinfo => true
+        schedule => "0 * * * * *" # crontab으로 logstash pipeline 실행 주기를 결정합니다.
     }
 }
 
@@ -21,7 +22,7 @@ filter {
 output {
   elasticsearch {
     hosts => ["http://elasticsearch:9200"] 
-    index => "%{+YYYY.DD.dd}_full_indexing_test_three"
+    index => "%{+YYYY.MM.dd}_full_indexing_test_three"
     user => "test"  
     password => "test1234"
     document_id => "%{[@metadata][fingerprint]}" # Use the fingerprint as the document _id
