--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -28,6 +28,14 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: 2.7 # or whichever version you're using
+      - name: Install dependencies
+        run: |
+          cd ./jekyll
+          bundle install
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Build with Jekyll
