--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -37,6 +37,9 @@ jobs:
       - name: Install specific version of Bundler
         run: gem install bundler:1.17.2
 
+      - name: RubyGems 업데이트
+        run: gem update --system
+
       - name: Install dependencies
         run: |
           cd ./jekyll
