--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -4,7 +4,7 @@ name: Deploy Jekyll with GitHub Pages dependencies preinstalled
 on:
   # Runs on pushes targeting the default branch
   push:
-    branches: ["main"]
+    branches: [$default-branch]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -28,33 +28,13 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-
-      - name: Set up Ruby
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: 2.7
-
-      - name: Install specific version of Bundler
-        run: gem install bundler:1.17.2
-
-      - name: RubyGems 업데이트
-        run: gem update --system
-
-      - name: Install dependencies
-        run: |
-          cd ./jekyll
-          ls -al
-          bundle install
-
       - name: Setup Pages
         uses: actions/configure-pages@v3
-
       - name: Build with Jekyll
         uses: actions/jekyll-build-pages@v1
         with:
           source: ./jekyll/
           destination: ./jekyll/_site
-
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
 
