[e] accessKey, secretKey 로직 수정

--- a/cloud/AWS/EKS_CloudFormation/myEKS.yaml
+++ b/cloud/AWS/EKS_CloudFormation/myEKS.yaml
@@ -12,11 +12,13 @@ Parameters:
     Type: String
     Description: AWS Access Key for the API server
     NoEcho: true
+    Default: '{{resolve:secretsmanager:MySecret:SecretString:access_key}}'
     
   AwsSecretKey:
     Type: String
     Description: AWS Secret Key for the API server
     NoEcho: true
+    Default: '{{resolve:secretsmanager:MySecret:SecretString:secret_key}}'
 
   NumWorkerNodes:
     Type: Number
