[e] EKS CloudFormation 수정 - worker, eks-cluster subnet 추가

--- a/cloud/AWS/EKS_CloudFormation/myEKS.yaml
+++ b/cloud/AWS/EKS_CloudFormation/myEKS.yaml
@@ -194,6 +194,7 @@ Resources:
         SecurityGroupIds:
           - !Ref ControlPlaneSecurityGroup
         SubnetIds:
+          - !Ref Subnet1
           - !Ref Subnet2
         EndpointPrivateAccess: true
         EndpointPublicAccess: false
@@ -353,6 +354,7 @@ Resources:
       NodegroupName: !Sub "${AWS::StackName}-NodeGroup"
       NodeRole: !GetAtt WorkerNodesRole.Arn
       Subnets:
+        - !Ref Subnet1
         - !Ref Subnet2
       DiskSize: !Ref WorkerNodeDiskSize
       InstanceTypes:
